--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev-server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -25,17 +26,19 @@
     "babel-loader": "^8.2.5",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "lts": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.1",
-    "sass": "^1.53.0",
+    "sass": "^1.5.1",
     "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
